--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,10 @@
-[package]
-name = "crumbeez"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = ["crates/*"]
+resolver = "2"
 
-[dependencies]
+[workspace.dependencies]
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
-zellij-tile = "0.41.0"
 
 [profile.release]
 opt-level = "z"
