fix: align plugin.yaml permissions with runtime requests
Add InterceptInput and WriteToStdin permissions that are requested
at runtime, plus keep WebAccess for future LLM integration.

--- a/plugin.yaml
+++ b/plugin.yaml
@@ -3,10 +3,12 @@ version: "0.1.0"
 minimum_zellij_version: "0.41.0"
 
 exec:
-	plugin_location: "target/wasm32-wasip1/debug/crumbeez.wasm"
+  plugin_location: "target/wasm32-wasip1/debug/crumbeez.wasm"
 
 permissions:
   - ReadApplicationState
   - RunCommands
+  - InterceptInput
+  - WriteToStdin
   - WebAccess
 
